# xeno

./: .gitignore  .gitmodules  ACP_CABI_PLUGIN_PLAN.md  ACP_INTEGRATION_HANDOVER.md  AGENTS.md  ARCHITECTURE_NEXT.md  Cargo.toml  MATCHER_NEXT.md  ORTHOGONALITY-SPEC.md  README.md  REFACTORING_PLAN.md  REFACTORING_ROADMAP.md  THIRD_PARTY_NOTICES  clippy.toml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
_archive/auth/: Cargo.toml
_archive/auth/src/: error.rs  lib.rs  pkce.rs  xdg.rs
crates/acp/: Cargo.toml
crates/acp/src/: backend.rs  commands.rs  handler.rs  lib.rs  panel.rs  state.rs  types.rs
crates/acp/tests/: pickle_integration.rs
crates/api/: Cargo.toml
crates/api/src/: capabilities.rs  info_popup.rs  ipc.rs  lib.rs  lsp.rs  lsp_ui.rs  menu.rs  paths.rs  render.rs  styles.rs  terminal_buffer.rs  terminal_ipc.rs  terminal_panel.rs  test_events.rs  theme.rs
crates/base/: Cargo.toml
crates/base/src/: color.rs  geometry.rs  key.rs  lib.rs  lsp.rs  mode.rs  pending.rs  prelude.rs  range.rs  selection.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  kdl_util.rs  lib.rs  options.rs  theme.rs  watch.rs
crates/core/: Cargo.toml
crates/core/src/: completion.rs  editor_ctx.rs  keymap_registry.rs  lib.rs  terminal_config.rs  transaction.rs
crates/core/tests/: registry.rs
crates/editor/: Cargo.toml
crates/editor-core/: Cargo.toml
crates/editor-core/src/: lib.rs
crates/editor-iced/: Cargo.toml  README.md
crates/editor-iced/src/: lib.rs  main.rs  runtime.rs
crates/editor-tui/: Cargo.toml
crates/editor-tui/src/: compositor.rs  layer.rs  lib.rs  panels.rs  render_adapter.rs  scene.rs  text_width.rs
crates/editor/src/: bootstrap.rs  capabilities.rs  command_queue.rs  completion.rs  editor_ctx.rs  editor_ctx_tests.rs  execution_gate.rs  extensions.rs  geometry.rs  hook_runtime.rs  info_popup.rs  io.rs  lib.rs  lsp.rs  metrics.rs  notifications.rs  overlay.rs  paste.rs  paths.rs  render_api.rs  scheduler.rs  seam_contract.rs  separator.rs  smoke_tests.rs  syntax_manager.rs  terminal_config.rs  test_events.rs  theme_source.rs  view_manager.rs
crates/editor/tests/: architecture.rs  broker_e2e.rs  integration.rs
crates/extensions/: Cargo.toml  build.rs
crates/extensions/src/: lib.rs
crates/frontend-iced/: Cargo.toml  README.md
crates/frontend-iced/src/: main.rs
crates/frontend_tui/: Cargo.toml
crates/frontend_tui/src/: backend.rs  compositor.rs  lib.rs  panels.rs  render_adapter.rs
crates/input/: Cargo.toml
crates/input/src/: command.rs  handler.rs  insert.rs  lib.rs  normal.rs  pending.rs  tests.rs  types.rs
crates/input/tests/: keybindings.rs
crates/invocation/: Cargo.toml
crates/invocation/src/: lib.rs  nu.rs  schema.rs
crates/keymap/: Cargo.toml  LICENSE
crates/keymap/core/: Cargo.toml
crates/keymap/derive/: Cargo.toml
crates/keymap/parser/: Cargo.toml
crates/keymap/src/: config.rs  kdl.rs  keymap.rs  lib.rs  matcher.rs
crates/language/: Cargo.toml
crates/language/src/: build.rs  config.rs  db.rs  grammar.rs  highlight.rs  ids.rs  language.rs  lib.rs  loader.rs  lsp_config.rs  query.rs  runtime.rs  syntax.rs  utils.rs
crates/language/tests/: highlighter_smoke.rs  integration.rs
crates/lsp/: Cargo.toml  LICENSE
crates/lsp/src/: changes.rs  client.rs  client_monitor.rs  concurrency.rs  document.rs  event.rs  forward.rs  lib.rs  mainloop.rs  message.rs  omni_trait.rs  panic.rs  position.rs  protocol.rs  registry.rs  router.rs  server.rs  socket.rs  stdio.rs  sync.rs  tracing.rs  types.rs
crates/lsp_framework/: Cargo.toml
crates/lsp_framework/src/: concurrency.rs  encoding.rs  forward.rs  lib.rs  omni_trait.rs  omni_trait_generated.rs  protocol.rs  server.rs  stdio.rs  types.rs
crates/macro/: Cargo.toml
crates/macro/src/: dispatch.rs  events.rs  extension.rs  keybindings.rs  lib.rs  notification.rs  option.rs
crates/macros/: Cargo.toml
crates/macros/src/: dispatch.rs  events.rs  keybindings.rs  lib.rs  notification.rs  option.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: actions.rs  commands.rs  completion.rs  hooks.rs  index.rs  keymap_registry.rs  lib.rs  macros.rs  mode.rs  motions.rs  notifications.rs  options.rs  panels.rs  registry_impls.rs  split_buffer.rs  statusline.rs  syntax.rs  theme.rs
crates/manifest/tests/: registry.rs
crates/matcher/: AGENTS.md  Cargo.toml  MATCHER_NEXT.md
crates/matcher/benches/: matcher.rs
crates/matcher/src/: engine.rs  lib.rs  limits.rs
crates/nu/: Cargo.toml
crates/nu/api/: Cargo.toml
crates/nu/cmd-base/: Cargo.toml
crates/nu/cmd-lang/: Cargo.toml  build.rs
crates/nu/cmd_lang/: Cargo.toml
crates/nu/core/: Cargo.toml
crates/nu/data/: Cargo.toml
crates/nu/derive-value/: Cargo.toml
crates/nu/engine/: Cargo.toml
crates/nu/experimental/: Cargo.toml
crates/nu/glob/: Cargo.toml
crates/nu/nuon/: Cargo.toml
crates/nu/parser/: Cargo.toml
crates/nu/path/: Cargo.toml
crates/nu/protocol/: Cargo.toml
crates/nu/runtime/: Cargo.toml
crates/nu/safe_commands/: Cargo.toml
crates/nu/sandbox/: Cargo.toml
crates/nu/src/: commands.rs  lib.rs  sandbox.rs  tests.rs
crates/nu/system/: Cargo.toml
crates/nu/utils/: Cargo.toml
crates/nu/value/: Cargo.toml
crates/primitives/: Cargo.toml
crates/primitives/src/: direction.rs  edit.rs  future.rs  geometry.rs  graphemes.rs  ids.rs  lib.rs  lsp.rs  mode.rs  movement.rs  pending.rs  prelude.rs  range.rs  rope.rs  selection.rs  style.rs
crates/ratatui/: Cargo.toml  README.md
crates/ratatui-notifications/: Cargo.toml
crates/ratatui-notifications/src/: lib.rs
crates/ratatui/src/: backend.rs  init.rs  layout.rs  lib.rs  prelude.rs  style.rs  text.rs
crates/registry/: AGENTS.md  Cargo.toml  README.md  build.rs
crates/registry-spec/: Cargo.toml
crates/registry-spec/src/: actions.rs  commands.rs  compile.rs  grammars.rs  gutters.rs  hooks.rs  languages.rs  lib.rs  lsp_servers.rs  meta.rs  motions.rs  notifications.rs  nu_de.rs  options.rs  statusline.rs  textobj.rs  themes.rs
crates/registry/actions/: Cargo.toml
crates/registry/build_src/: actions.rs  (+4 more)
(+3835 files in other folders)
