[workspace]
resolver = "3"
members = [
    "crates/editor",
    "crates/frizbee",
    "crates/input",
    "crates/keymap/*",
    "crates/language",
    "crates/lsp",
    "crates/macros",
    "crates/primitives",
    "crates/registry",
    "crates/registry-spec",
    "crates/rpc",
    "crates/term",
    "crates/tui",
]

[workspace.package]
version = "0.8.11"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/Alb-O/xeno"
rust-version = "1.86.0"

[workspace.dependencies]
anyhow = "1.0"
arc-swap = "1.8"
async-trait = "0.1"
base64 = "0.22"
bitflags = "2.10"
bumpalo = { version = "3.19", features = ["collections"] }
cc = "1.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
criterion = "0.8"
crossterm = "0.29"
dashmap = "6.1"
dirs = "6.0"
frizbee = { path = "crates/frizbee" }
fs2 = "0.4"
globset = "0.4"
heed3 = "0.22"
ignore = "0.4"
include_dir = "0.7"
insta = "1.46"
inventory = "0.3"
itertools = "0.14"
kdl = "6.5"
kitty-test-harness = "0.2"
libc = "0.2"
libloading = "0.9"
lsp-types = "0.97"
notify = "8.2"
once_cell = "1.21"
parking_lot = "0.12"
paste = "1.0"
pin-project-lite = "0.2"
portable-pty = "0.9"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
proc-macro2 = "1.0"
proptest = "1.9"
quote = "1.0"
rand = "0.9"
regex = "1.12"
ropey = "1.6"
rustc-hash = "2.1"
rustix = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.3"
sha2 = "0.10"
smallvec = "1.15"
strsim = "0.11"
strum = "0.27"
strum_macros = "0.27"
syn = { version = "2.0", features = ["full"] }
tempfile = "3.24"
termina = "0.1"
termwiz = "0.23"
thiserror = "2.0"
tokio = { version = "1.49", default-features = false, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "io-util", "net", "process", "signal", "fs"] }
tokio-util = "0.7"
toml = "0.9"
tower = "0.5"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-house = { git = "https://github.com/Alb-O/tree-house", branch = "sealed-source" }
unicode-segmentation = "1.12"
unicode-width = "0.2"
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.20", features = ["v4"] }
vt100 = "0.16"
waitpid-any = "0.3"
which = "8.0"
xeno-editor = { path = "crates/editor" }
xeno-input = { path = "crates/input" }
xeno-keymap-core = { path = "crates/keymap/core" }
xeno-keymap-parser = { path = "crates/keymap/parser" }
xeno-lsp = { path = "crates/lsp" }
xeno-macros = { path = "crates/macros" }
xeno-primitives = { path = "crates/primitives" }
xeno-registry = { path = "crates/registry" }
xeno-registry-spec = { path = "crates/registry-spec" }
xeno-rpc = { path = "crates/rpc" }
xeno-runtime-language = { path = "crates/language" }
xeno-tui = { path = "crates/tui" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
