[workspace]
resolver = "3"
members = [
    "crates/editor",
    "crates/frontend-iced",
    "crates/frontend-tui",
    "crates/input",
    "crates/invocation",
    "crates/invocation-spec",
    "crates/keymap/*",
    "crates/language",
    "crates/lsp",
    "crates/macros",
    "crates/matcher",
    "crates/nu",
    "crates/primitives",
    "crates/registry",
    "crates/registry-spec",
    "crates/rpc",
    "crates/term",
    "crates/tui",
]

[workspace.package]
version = "0.9.3"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/Alb-O/xeno"
rust-version = "1.88.0"

[workspace.dependencies]
anyhow = "1.0"
arc-swap = "1.8"
async-trait = "0.1"
base64 = "0.22"
bitflags = "2.11"
cc = "1.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
criterion = "0.8"
crossterm = "0.29"
dirs = "6.0"
ignore = "0.4"
insta = "1.46"
inventory = "0.3"
libloading = "0.8"
lsp-types = "0.97"
nu-cmd-lang = "0.110.0"
nu-engine = { version = "0.110", default-features = false }
nu-parser = "0.110"
nu-protocol = { version = "0.110", default-features = false }
nuon = "0.110"
parking_lot = "0.12"
paste = "1.0"
pin-project-lite = "0.2"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
proc-macro2 = "1.0"
proptest = "1.10"
quote = "1.0"
regex = "1.12"
regex-cursor = "0.1"
ropey = "1.6"
rustc-hash = "2.1"
rustix = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.3"
slab = "0.4"
smallvec = "1.15"
strsim = "0.11"
strum = "0.27"
strum_macros = "0.27"
syn = { version = "2.0", features = ["full"] }
tempfile = "3.25"
termina = "0.1"
termwiz = "0.23"
thiserror = "2.0"
tokio = { version = "1.49", default-features = false, features = ["macros", "rt", "sync", "io-util"] }
typetag = "0.2"
tokio-util = "0.7"
toml = "1.0"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = { package = "tree-house-bindings", version = "0.2.2" }
tree-sitter-language = "0.1.7"
unicode-segmentation = "1.12"
unicode-width = "0.2"
url = "2.5"
uuid = { version = "1.21", features = ["v4"] }
vt100 = "0.16"
waitpid-any = "0.3"
which = "8.0"
xeno-editor = { path = "crates/editor" }
xeno-frontend-tui = { path = "crates/frontend-tui" }
xeno-input = { path = "crates/input" }
xeno-invocation = { path = "crates/invocation" }
xeno-invocation-spec = { path = "crates/invocation-spec" }
xeno-keymap-core = { path = "crates/keymap/core" }
xeno-keymap-parser = { path = "crates/keymap/parser" }
xeno-language = { path = "crates/language" }
xeno-lsp = { path = "crates/lsp" }
xeno-macros = { path = "crates/macros" }
xeno-matcher = { path = "crates/matcher" }
xeno-nu = { path = "crates/nu" }
xeno-primitives = { path = "crates/primitives" }
xeno-registry = { path = "crates/registry" }
xeno-registry-spec = { path = "crates/registry-spec" }
xeno-rpc = { path = "crates/rpc" }
xeno-tree-house = { path = "crates/tree-house", default-features = false }
xeno-tui = { path = "crates/tui" }

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
