[workspace]
resolver = "3"
members = [
    "crates/buffer_display",
    "crates/editor",
    "crates/frontend_iced",
    "crates/frontend_tui",
    "crates/input",
    "crates/invocation",
    "crates/invocation_spec",
    "crates/keymap/*",
    "crates/language",
    "crates/lsp",
    "crates/macros",
    "crates/matcher",
    "crates/nu/api",
    "crates/nu/data",
    "crates/nu/runtime",
    "crates/nu/safe_commands",
    "crates/primitives",
    "crates/registry",
    "crates/registry_spec",
    "crates/rpc",
    "crates/syntax",
    "crates/term",
    "crates/tui",
]

[workspace.package]
version = "0.9.3"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/Alb-O/xeno"
rust-version = "1.95.0"

[workspace.dependencies]
anyhow = "1.0"
arc-swap = "1.8"
async-trait = "0.1"
base64 = "0.22"
bitflags = "2.11"
brotli = "8.0"
bytes = "1"
bytesize = "2.3.1"
byteyarn = "0.5"
cc = "1.2"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.8"
crossterm = "0.29"
devicons = "0.6"
dirs = "6.0"
dirs-sys = "0.5"
fancy-regex = "0.17"
heck = "0.5.0"
ignore = "0.4"
indexmap = "2.13"
insta = "1.46"
inventory = "0.3"
itertools = "0.14"
lean_string = { version = "0.5", features = ["serde"] }
libc = "=0.2.178"
libloading = "0.8"
libproc = "0.14"
log = "0.4"
lru = "0.16"
lscolors = { version = "0.20", default-features = false }
lsp-types = "0.97"
mach2 = "0.6"
memchr = "2.7.6"
miette = "7.6"
nix = { version = "0.30", default-features = false }
num-format = "0.4"
omnipath = "0.1"
os_pipe = { version = "1.2", features = ["io_safety"] }
parking_lot = "0.12"
paste = "1.0"
pin-project-lite = "0.2"
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
pretty_assertions = "1.4"
proc-macro-error2 = "2.0"
proc-macro2 = "1.0"
procfs = "0.18.0"
proptest = "1.10"
pwd = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.1"
quote = "1.0"
regex = "1.12"
regex-cursor = "0.1"
rmp-serde = "1.3.1"
ropey = "1.6"
rstest = { version = "0.23", default-features = false }
rustc-hash = "2.1"
rustix = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.3"
slab = "0.4"
smallvec = "1.15"
strip-ansi-escapes = "0.2.1"
strsim = "0.11"
strum = "0.27"
strum_macros = "0.27"
syn = { version = "2.0", features = ["full"] }
sysinfo = "0.38.0"
tempfile = "3.25"
termina = "0.1"
termwiz = "0.23"
thiserror = "2.0"
tokio = { version = "1.49", default-features = false, features = ["macros", "rt", "sync", "io-util"] }
tokio-util = "0.7"
toml = "1.0"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tree-sitter = { package = "tree-house-bindings", version = "0.2.2" }
tree-sitter-language = "0.1.7"
typetag = "0.2"
unicode-segmentation = "1.12"
unicode-width = "0.2"
url = "2.5"
uucore = "0.6.0"
uuid = { version = "1.21", features = ["v4"] }
vt100 = "0.16"
waitpid-any = "0.3"
web-time = "1.1.0"
which = "8.0"
windows = "0.62"
windows-sys = "0.61"
xeno-buffer-display = { path = "crates/buffer_display" }
xeno-editor = { path = "crates/editor" }
xeno-frontend-tui = { path = "crates/frontend_tui" }
xeno-input = { path = "crates/input" }
xeno-invocation = { path = "crates/invocation" }
xeno-invocation-spec = { path = "crates/invocation_spec" }
xeno-keymap-core = { path = "crates/keymap/core" }
xeno-keymap-parser = { path = "crates/keymap/parser" }
xeno-language = { path = "crates/language" }
xeno-lsp = { path = "crates/lsp" }
xeno-macros = { path = "crates/macros" }
xeno-matcher = { path = "crates/matcher" }
xeno-nu-api = { path = "crates/nu/api" }
xeno-nu-cmd-lang = { path = "crates/nu/cmd_lang", version = "0.110.1", default-features = false }
xeno-nu-data = { path = "crates/nu/data" }
xeno-nu-engine = { path = "crates/nu/engine", version = "0.110.1", default-features = false }
xeno-nu-nuon = { path = "crates/nu/nuon", version = "0.110.1" }
xeno-nu-parser = { path = "crates/nu/parser", version = "0.110.1" }
xeno-nu-protocol = { path = "crates/nu/protocol", version = "0.110.1", default-features = false }
xeno-nu-runtime = { path = "crates/nu/runtime" }
xeno-nu-safe-commands = { path = "crates/nu/safe_commands" }
xeno-primitives = { path = "crates/primitives" }
xeno-registry = { path = "crates/registry" }
xeno-registry-spec = { path = "crates/registry_spec" }
xeno-rpc = { path = "crates/rpc" }
xeno-syntax = { path = "crates/syntax" }
xeno-tree-house = { path = "crates/tree_house", default-features = false }
xeno-tui = { path = "crates/tui" }

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
