[package]
name = "tome-acp"
description = "ACP (Agent Client Protocol) integration for Tome"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
futures.workspace = true
linkme.workspace = true
parking_lot.workspace = true
paste.workspace = true
tome-tui.workspace = true
termina.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tome-api.workspace = true
tome-base.workspace = true
tome-manifest.workspace = true
tome-stdlib.workspace = true
tome-theme.workspace = true

[dev-dependencies]
async-trait.workspace = true
