[package]
name = "evildoer-acp"
description = "ACP (Agent Client Protocol) integration for Evildoer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
evildoer-api.workspace = true
evildoer-base.workspace = true
evildoer-manifest.workspace = true
evildoer-registry.workspace = true
evildoer-stdlib.workspace = true
evildoer-tui.workspace = true
futures.workspace = true
linkme.workspace = true
parking_lot.workspace = true
paste.workspace = true
termina.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
async-trait.workspace = true
