[package]
name = "xeno-acp"
description = "ACP (Agent Client Protocol) integration for Xeno"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
futures.workspace = true
linkme.workspace = true
parking_lot.workspace = true
paste.workspace = true
termina.workspace = true
tokio.workspace = true
tokio-util.workspace = true
xeno-api.workspace = true
xeno-base.workspace = true
xeno-core.workspace = true
xeno-registry.workspace = true
xeno-tui.workspace = true
[dev-dependencies]
async-trait.workspace = true
