[package]
name = "tome-api"
description = "Terminal editor API and core logic for Tome"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap.workspace = true
futures.workspace = true
home.workspace = true
linkme.workspace = true
parking_lot.workspace = true
paste.workspace = true
portable-pty.workspace = true
ratatui.workspace = true
regex.workspace = true
ropey.workspace = true
serde.workspace = true
strsim.workspace = true
termina.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tome-core.workspace = true
toml.workspace = true
tui-term.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
insta.workspace = true
