[package]
name = "evildoer-api"
description = "Terminal editor API and core logic for Evildoer"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
lsp = ["dep:evildoer-lsp"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap.workspace = true
evildoer-base.workspace = true
evildoer-input.workspace = true
evildoer-language.workspace = true
evildoer-lsp = { workspace = true, features = ["position"], optional = true }
evildoer-manifest.workspace = true
evildoer-stdlib.workspace = true
evildoer-tui.workspace = true
futures.workspace = true
home.workspace = true
linkme.workspace = true
log.workspace = true
parking_lot.workspace = true
paste.workspace = true
portable-pty.workspace = true
regex.workspace = true
ropey.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
termina.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tree-house.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
insta.workspace = true
