[package]
name = "tome-base"
description = "Basic editing primitives for Tome editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["tome-tui"]
tome-tui = ["dep:tome-tui"]

[dependencies]
crossterm.workspace = true
log.workspace = true
tome-tui = { workspace = true, optional = true }
ropey.workspace = true
serde.workspace = true
smallvec.workspace = true
termina.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
