[package]
name = "evildoer-base"
description = "Basic editing primitives for Evildoer editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["evildoer-tui"]
evildoer-tui = ["dep:evildoer-tui"]

[dependencies]
crossterm.workspace = true
evildoer-tui = { workspace = true, optional = true }
log.workspace = true
ropey.workspace = true
serde.workspace = true
smallvec.workspace = true
termina.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
