[package]
name = "evildoer-config"
description = "Configuration system for Evildoer editor - KDL parsing, runtime config loading"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
evildoer-base.workspace = true
evildoer-manifest.workspace = true
kdl.workspace = true
thiserror.workspace = true

[dev-dependencies]
evildoer-runtime.workspace = true
