[package]
name = "evildoer-config"
description = "Configuration system for Evildoer editor - KDL parsing, runtime config loading"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["watch"]
watch = ["notify"]

[dependencies]
evildoer-base.workspace = true
evildoer-manifest.workspace = true
kdl.workspace = true
notify = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
evildoer-runtime.workspace = true
tempfile.workspace = true
