[package]
name = "xeno-config"
description = "Configuration system - KDL parsing, runtime config loading"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["watch"]
watch = ["notify"]

[dependencies]
kdl.workspace = true
notify = { workspace = true, optional = true }
strsim.workspace = true
thiserror.workspace = true
xeno-base.workspace = true
xeno-registry.workspace = true

[dev-dependencies]
tempfile.workspace = true
xeno-runtime.workspace = true
