[package]
name = "xeno-editor-core"
description = "Headless editor core: documents and undo history"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
xeno-primitives.workspace = true
xeno-runtime-language.workspace = true

[dev-dependencies]
proptest.workspace = true
