[package]
name = "xeno-editor"
description = "Editor engine: buffers, workspace, rendering, and LSP integration"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["tui"]
tui = ["xeno-primitives/tui-style", "xeno-primitives/terminal-input"]
lsp = ["dep:xeno-lsp", "dep:thiserror", "dep:tokio-util"]
[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
ignore.workspace = true
inventory.workspace = true
parking_lot.workspace = true
paste.workspace = true
postcard.workspace = true
regex.workspace = true
ropey.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "time"] }
tokio-util = { workspace = true, optional = true }
tracing.workspace = true
unicode-width.workspace = true
xeno-buffer-display.workspace = true
xeno-input.workspace = true
xeno-invocation = { workspace = true, features = ["nu"] }
xeno-invocation-spec.workspace = true
xeno-language.workspace = true
xeno-lsp = { workspace = true, features = ["position"], optional = true }
xeno-matcher.workspace = true
xeno-nu-api.workspace = true
xeno-nu-data.workspace = true
xeno-primitives.workspace = true
xeno-registry.workspace = true
xeno-syntax.workspace = true
xeno-worker.workspace = true
[dev-dependencies]
futures = "0.3"
proptest.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing-subscriber = "0.3"
xeno-keymap-core.workspace = true
xeno-lsp = { workspace = true, features = ["client", "position"] }

[lints]
workspace = true
