[package]
name = "tome-extensions"
description = "Built-in extensions for Tome"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentfs-sdk.workspace = true
anyhow.workspace = true
futures.workspace = true
linkme.workspace = true
paste.workspace = true
tome-api.workspace = true
tome-language.workspace = true
tome-manifest.workspace = true
tome-stdlib.workspace = true
