[package]
name = "xeno-extensions"
description = "Built-in extensions for Xeno"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
linkme.workspace = true
paste.workspace = true
tracing.workspace = true
xeno-api.workspace = true
xeno-core.workspace = true
xeno-language.workspace = true
xeno-lsp = { workspace = true, features = ["client", "position"] }
xeno-macro.workspace = true
xeno-registry.workspace = true
[dev-dependencies]
ropey.workspace = true
