[package]
name = "xeno-frontend-iced"
description = "Experimental iced_wgpu frontend runtime for xeno-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "xeno-iced"

[[bin]]
name = "xeno-iced"
path = "src/main.rs"
required-features = ["iced-wgpu"]

[features]
default = []
iced-wgpu = [
    "dep:iced",
    "dep:iced_core",
    "dep:tokio",
    "dep:xeno-editor",
    "dep:xeno-primitives",
]

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "8dce83de35cb96f57374bbd41fed47334f6b636b", default-features = false, features = ["wgpu", "tokio", "x11", "wayland"], optional = true }
iced_core = { git = "https://github.com/iced-rs/iced", rev = "8dce83de35cb96f57374bbd41fed47334f6b636b", optional = true }
tokio = { workspace = true, optional = true }
xeno-editor = { path = "../editor", default-features = false, optional = true }
xeno-primitives = { path = "../primitives", default-features = false, optional = true }

[lints]
workspace = true
