[package]
name = "xeno-invocation"
description = "Canonical invocation types and Nu interop for Xeno"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
nu = ["dep:xeno-nu-value", "dep:serde", "dep:typetag"]

[dependencies]
serde = { workspace = true, optional = true }
typetag = { version = "0.2", optional = true }
xeno-nu-value = { workspace = true, optional = true }

[lints.rust]
unused_crate_dependencies = "warn"
