[package]
name = "xeno-invocation"
description = "Canonical invocation types and Nu interop for Xeno"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
nu = ["dep:xeno-nu-data"]

[dependencies]
xeno-nu-data = { workspace = true, optional = true }

[lints.rust]
unused_crate_dependencies = "warn"
