[package]
name = "xeno-keymap"
description = "Key mapping library with compile-time validated derive macros and declarative configuration."
version.workspace = true
edition.workspace = true
license-file = "LICENSE"
repository.workspace = true

[lib]
doctest = false

[features]
default = ["derive", "termina", "kdl", "xeno-base"]
derive = ["dep:xeno-keymap-derive"]
termina = ["dep:termina"]
kdl = ["dep:kdl"]
xeno-base = ["dep:xeno-base"]

[dependencies]
kdl = { workspace = true, optional = true }
serde = { workspace = true }
termina = { workspace = true, optional = true }
xeno-base = { workspace = true, optional = true }
xeno-keymap-derive = { path = "./derive", optional = true }
xeno-keymap-parser = { path = "./parser" }

[dev-dependencies]
kdl = { workspace = true }
toml = { workspace = true }
