[package]
name = "xeno-language"
description = "Language configuration and metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cc = "1.0"
kdl.workspace = true
libloading.workspace = true
once_cell.workspace = true
regex.workspace = true
ropey.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
tree-house.workspace = true
xeno-base.workspace = true
xeno-core.workspace = true
xeno-runtime.workspace = true

[dev-dependencies]
tempfile.workspace = true
