[package]
name = "xeno-language"
description = "Language configuration and metadata"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cc.workspace = true
regex.workspace = true
ropey.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tree-house.workspace = true
xeno-primitives.workspace = true
xeno-registry.workspace = true
xeno-registry-spec.workspace = true

[lints.rust]
unused_crate_dependencies = "warn"
