[package]
name = "xeno-lsp"
description = "Asynchronous Language Server Protocol (LSP) framework based on tower"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["client-monitor", "omni-trait", "stdio"]
client-monitor = ["dep:waitpid-any", "dep:rustix"]
omni-trait = []
stdio = ["dep:rustix", "rustix?/fs", "tokio?/net"]
forward = []
tokio = ["dep:tokio"]
# LSP client support (spawns and manages language server processes)
client = [
    "dep:tokio",
    "tokio?/process",
    "tokio?/io-util",
    "tokio?/sync",
    "dep:parking_lot",
    "dep:tokio-util",
]
# Position conversion utilities (requires ropey)
position = ["dep:ropey", "client", "dep:xeno-base"]

[dependencies]
futures.workspace = true
lsp-types = "0.97"
parking_lot = { workspace = true, optional = true }
pin-project-lite = "0.2"
ropey = { workspace = true, optional = true }
rustix = { version = "1", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true, features = ["compat"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing.workspace = true
waitpid-any = { version = "0.3", optional = true }
xeno-base = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "process", "rt", "time"] }
tokio-util.workspace = true
tower = "0.5"
tracing-subscriber = "0.3"
