[package]
name = "xeno-lsp"
description = "Asynchronous Language Server Protocol (LSP) framework based on tower"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["client-monitor", "omni-trait", "stdio"]
client-monitor = ["dep:waitpid-any", "dep:rustix"]
omni-trait = []
stdio = ["dep:rustix", "rustix?/fs", "tokio/net"]
forward = []
tokio = []
# LSP client support (spawns and manages language server processes)
client = [
    "tokio/process",
    "tokio/io-util",
    "tokio/sync",
    "dep:parking_lot",
    "dep:tokio-util",
]
# Position conversion utilities (requires ropey)
position = ["dep:ropey", "client", "dep:xeno-primitives"]

[dependencies]
lsp-types.workspace = true
parking_lot = { workspace = true, optional = true }
pin-project-lite.workspace = true
ropey = { workspace = true, optional = true }
rustix = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "io-util", "macros"] }
tokio-util = { workspace = true, optional = true }
tower-layer.workspace = true
tower-service.workspace = true
tracing.workspace = true
url.workspace = true
waitpid-any = { workspace = true, optional = true }
xeno-primitives = { workspace = true, optional = true }
xeno-rpc.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "process", "rt", "time"] }
tokio-util.workspace = true

[lints]
workspace = true
