[package]
name = "xeno-lsp"
description = "LSP client stack: transport, session management, and document synchronization"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
client = [
    "dep:globset",
    "dep:lsp-types",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
    "dep:tracing",
    "dep:xeno-worker",
    "tokio/process",
    "tokio/io-util",
    "tokio/sync",
    "dep:async-trait",
    "dep:parking_lot",
]
position = [
    "client",
    "dep:ropey",
    "dep:thiserror",
    "dep:tokio-util",
    "dep:url",
    "dep:xeno-primitives",
    "xeno-lsp-framework/position",
]

[dependencies]
async-trait = { workspace = true, optional = true }
globset = { workspace = true, optional = true }
lsp-types = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
ropey = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt", "sync", "io-util", "macros"] }
tokio-util = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url = { workspace = true, optional = true }
xeno-lsp-framework.workspace = true
xeno-primitives = { workspace = true, optional = true }
xeno-worker = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "process", "rt", "test-util", "time"] }

[lints]
workspace = true
